--- a/app/src/main/res/layout/activity_ingridiants.xml
+++ b/app/src/main/res/layout/activity_ingridiants.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
+        android:background="#8BC34A"
         android:onClick="OnClick"
         android:text="back"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +23,7 @@
         android:id="@+id/imageView2"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,17 +31,20 @@
         app:srcCompat="@drawable/fitmeal" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="225dp"
-        android:layout_height="140dp"
-        android:layout_marginBottom="64dp"
-        android:text="300 gr Chicken Breast \n100 gr sweet pottato \n100 gr broccoli"
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:inputType="textMultiLine"
+        android:singleLine="false"
+        android:text="This recipe for chicken and broccoli stir fry is a classic dish of chicken sauteed with\nfresh broccoli florets and coated in a savory sauce.\nYou can have a healthy and easy dinner on the table in 30 minutes!\nThere’s nothing better than a good stir fry,\nI always make honey garlic chicken stir fry, teriyaki shrimp and this easy chicken and broccoli dish."
         android:textColor="#000000"
-        android:textSize="10sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.761" />
+        app:layout_constraintVertical_bias="0.404" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
