--- a/app/src/main/res/layout/meal.xml
+++ b/app/src/main/res/layout/meal.xml
@@ -1,101 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    android:id="@+id/linearLayout"
 
     android:layout_width="match_parent"
 
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
 
-    >
 
+    <TextView
+
+        android:id="@+id/price"
+
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+
+
+        android:layout_marginEnd="70dp"
+        android:gravity="right"
+        android:text="99"
+        android:textColor="#F44336"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/MealName"
+        tools:layout_editor_absoluteY="47dp" />
 
     <ImageView
 
         android:id="@+id/ivMeal"
 
-        android:layout_width="133dp"
+        android:layout_width="100dp"
 
-        android:layout_height="108dp"
+        android:layout_height="100dp"
 
-        />
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <TextView
 
-        android:layout_width="158dp"
+        android:id="@+id/MealName"
 
-        android:layout_height="108dp"
+        android:layout_width="wrap_content"
 
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
 
-        >
-
-
-        <TextView
-
-            android:id="@+id/MealName"
-
-            android:layout_width="wrap_content"
-
-            android:layout_height="wrap_content"
-
-            android:layout_marginLeft="10dp"
-
-            android:layout_marginTop="5dp"
-
-            android:text="title"
-
-            android:textColor="#4CAF50"
-
-            android:textSize="20dp"
-
-            />
-
-        <TextView
-
-            android:id="@+id/Mealid"
-
-            android:layout_width="wrap_content"
-
-            android:layout_height="wrap_content"
-
-            android:layout_marginLeft="10dp"
-
-            android:layout_marginTop="5dp"
-
-            android:text="subtitle"
-
-            android:textColor="#000000"
-
-            android:textSize="20dp"
-
-            />
-
-    </LinearLayout>
+        android:layout_marginStart="40dp"
+        android:text="title"
+        android:textColor="#4CAF50"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/price"
+        app:layout_constraintStart_toEndOf="@+id/ivMeal"
+        app:layout_constraintTop_toBottomOf="@+id/calories" />
 
     <TextView
 
         android:id="@+id/calories"
 
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
 
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="20dp"
 
-        android:layout_marginRight="20dp"
-
+        android:layout_marginEnd="70dp"
         android:gravity="right"
-
         android:text="500"
-
         android:textColor="#4CAF50"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/MealName"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        android:textSize="30sp"
 
-
-        />
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
